# forest

./: .dockerignore  .env  .gitignore  .goreleaser.yaml  .release-please-manifest.json  CLAUDE.md  Cargo.toml  README.md  buf.gen.yaml  buf.yaml  cuddle.yaml  docker-compose.yml  mise.toml  release-please-config.json
apps/forage/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  buf.gen.yaml  buf.yaml  forest.cue  mise.toml  package-lock.json  package.json
apps/forage/ci/: Cargo.toml
apps/forage/frontend/: package-lock.json  package.json  vite.config.js
apps/forage/interface/: proto
apps/forage/scripts/: sync-protos.sh
apps/forage/specs/: PITCH.md  VSDD.md
apps/forage/tasks/: approval-gate.md  rename-to-forest.md
apps/forage/templates/: base.html.jinja  docker-compose.yaml  forage-server.Dockerfile
apps/forage/tools/: webhook-test-server.py
crates/cargo-no/: Cargo.toml
crates/cargo-no/src/: cli.rs
crates/forest/: Cargo.toml
crates/forest-event-store/fuzz/: Cargo.toml
crates/forest-manifest/: Cargo.toml
crates/forest-manifest/src/: lib.rs  names.rs
crates/forest-runner/: Cargo.toml
crates/forest-runner/src/: client.rs  executor.rs  lib.rs  logger.rs  service.rs
crates/forest-server/: Cargo.toml
crates/forest-server/.sqlx/: query-16827c4951643aecb94bb5a07c4367f69bb12c662e6a4196abb1b407f6a7228c.json  query-16974a409590d6841b1c645a9973cc588a86c22aa7860ba3fb26e6063c074bf9.json  query-1fdad940a12024ea2c501420f7e22d9a3abda3a8d178e41bdd6271101ccb46fe.json  query-3e6870479aa33df8a762fe65adc151befc8bc8f084d9f35eacb5ce41edd863e1.json  query-462ec8ccdd517e337df2639828b98569f1b624509418438ca2c16f53a59ac71b.json  query-553dd6171c6c53825893453176033b701d7731fc1bc4303410a70e91b7a33d7f.json  query-5b3de22077603bcd313eca0db64a4c1409599dc3ec310996addc1ed58b2f8f78.json  query-5b59910a84b04a3936ec8cbb5f6016c66471f23a6fd7b0f35d505ca9dceae117.json  query-60ae1c6f85eb44334df05162d1248f15cd89d0b238741aa81b49b159a74b4be2.json  query-6316fb5145a3f4b14bf9a685baf8136edd153c77f36f044bceb81399b46d3eb0.json  query-643f6fceeb363ce19261aa2b373a2d92d90531fd3d934a457043ffe7e35d4cc6.json  query-66227c06501d9e1905de0c5ea52bc50531b3046abcc2edf0028f78dbcb8693dd.json  query-67584ab37beb0f4ec36285ed78791ff9827a806bf63d199de6ffbe872e76de6d.json  query-76a743586c30e480b85befc8b80d40e2c0a0b913f1ea1654a39025016758f49b.json  query-7a9fa701797665b0f6c9193d8e9e6b60c0e3a74fcc99e005cb01d5ab5683f7d1.json  query-81dcc3f4d8dc7ebe3072fb5ff39750a344b479e625e3a1171e27a983781b909f.json  query-9096fec8fe57a8c591b71d8dcb45fde3efb0766f8149529415a2716b35040a50.json  query-926f8c045d24c6e767bf9521a3fc49b875af680c8a55cdad1e367c40ab613d1a.json  query-9bae1bb843a79ad821220c724da5bed48323144373ea002a9020e865b7e47721.json  query-9e4585797cab5a4c6f70604db7d926417389cf5599a7f1dad8f7db83e0f27447.json  query-a2039331582505f377a5450389e990e9530572484d51820ef19aac57649a6ff7.json  query-af85809f4c27592b64db100b98d2646d53989b4af8597c46ed13ec59c20fb707.json  query-c50ea126042d07130a18d453f5635ad89315c9ebc8cec07f4fcce1efb3af457a.json  query-c64548c4c37318657c09d5f752f3035c35b7ddaa6a9176b4f19c1601d7c2e17d.json  query-cf7d5be8fc2b729c4428534bbc02660c43a13c154df3bec97a0cb6e38304f48c.json  query-cfc6f616fd9c73de3897940e2ec1e7436eba1cbc5badb98857cb79e7c654f40a.json  query-dc1fdc832f830c6abba986d57174d671e463527f6990cf701380d8123eb060cd.json  query-e34570f71f507820b1df810874240625fb60fe8fbd6ab08bcd47fa2f5b321a41.json  query-f361c6b3ace67bbe09cb3bcfd928e32235592d516b3e65fc3ed8514cc5506494.json  query-fa6a424196955dbdecb01836e2719f85c6c726e2f5b6a21efec12d43aab47615.json
crates/forest-server/migrations/: 20250622092446_initial.sql  20260129185313_users.sql  20260213204107_organisations.sql  20260213215800_user_search_fts.sql  20260214000303_rename_namespace_to_organisation.sql  20260221000000_notifications.sql  20260228000000_artifact_file_category.sql  20260301000000_release_tokens.sql  20260308000000_apps_and_actor_tracking.sql  20260308100000_environments.sql  20260315000001_approval_decisions.sql  20260327100000_component_v2_registry.sql  20260514000000_component_shape.sql
crates/forest-server/src/: actor.rs  checks.rs  cli.rs  destination_services.rs  destinations.rs  grpc.rs  intent_coordinator.rs  lib.rs  main.rs  native_credentials.rs  object_store.rs  release_reaper.rs  repositories.rs  runner_manager.rs  scheduler.rs  servehttp.rs  services.rs  state.rs  temp_dir.rs  tokens.rs  webhooks.rs
crates/forest/src/: cli.rs  component_cache.rs  component_registry.rs  contracts.rs  grpc.rs  main.rs  model.rs  models.rs  plan_reconciler.rs  requirements.rs  script.rs  services.rs  state.rs  user_config.rs  user_state.rs  version_spec.rs
crates/non/: Cargo.toml
crates/non-server/: Cargo.toml
crates/non-server/migrations/: 20250622092446_initial.sql
crates/non-server/src/: cli.rs  destination_services.rs  destinations.rs  grpc.rs  main.rs  scheduler.rs  services.rs  state.rs
crates/non/src/: cli.rs  component_cache.rs  component_registry.rs  drop_queue.rs  grpc.rs  main.rs  models.rs  non_context.rs  project_artifacts.rs  requirements.rs  services.rs  state.rs  user_config.rs  user_locations.rs
examples/rust-podinfo/: Cargo.toml  flux-test.sh  forest.cue  k3d-flux-test.sh  test.sh
examples/rust-podinfo/.k3d-flux-test/: Dockerfile
examples/rust-podinfo/src/: main.rs
examples/service-example/: Cargo.toml  bootstrap.sh  forest.cue  non.bak.ncl  non.bak.toml  non.bak.yaml  non.cue  non.toml
examples/service-example/cue.mod/: module.cue
examples/service-example/src/: main.rs
hollow/: Cargo.toml  HANDOFF.md  buf.gen.yaml  buf.yaml  mise.toml  spec.md
hollow/crates/forest-component-init/: Cargo.toml
hollow/crates/forest-component-script/: Cargo.toml
hollow/images/: .gitignore  Dockerfile.base  Dockerfile.docker-test  Dockerfile.exec-v1  Dockerfile.fluxv1  Dockerfile.opentofu-v1  Dockerfile.terraform-v1  Makefile  forest-component-init  forest-component-render-template  forest-component-script  forest-exec-runner  forest-flux-deploy  podman-containers.conf  podman-storage.conf
(+1438 files in other folders)
