[workspace]
members = ["crates/*", "examples/service-example"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
forest = { path = "crates/forest" }
forest-server = { path = "crates/forest-server" }
forest-models = { path = "crates/forest-models" }
forest-grpc-interface = { path = "crates/forest-grpc-interface" }

anyhow = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env", "string"] }
dotenvy = { version = "0.15" }
async-trait = "0.1.88"
semver = "1.0.26"
futures = "0.3.31"
notmad = "0.11.0"
drop-queue = { version = "0.0.9", features = ["notmad"] }
rand = "0.10.0"
noworkers = "0.1.0"

bytes = "1.10.1"
prost = "0.14.1"
prost-types = "0.14.1"
tonic = { version = "=0.14.5", features = ["gzip"] }
tonic-prost = "=0.14.5"
