[workspace]
members = [
  "crates/*",
  "examples/components-v2/crates/kubernetes-service",
  "components/forest-contrib/terraform-service/crates/terraform-service",
  "components/forest-contrib/render-template/crates/render-template",
  "components/forest-contrib/checkout/crates/checkout",
  "components/forest-contrib/git-commit-push/crates/git-commit-push",
  "components/forest-contrib/gitea-create-repo/crates/gitea-create-repo",
  "components/forest-contrib/init/crates/init",
  "components/forest-contrib/git-init/crates/git-init",
  # "examples/rust-service-component/crates/rust-service",  # legacy v1 example — needs update
  "examples/rust-podinfo",
  "examples/service-example",
  "ci",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
forest-models = { path = "crates/forest-models" }
forest-grpc-interface = { path = "crates/forest-grpc-interface" }
forest-runner = { path = "crates/forest-runner" }
forest-sdk = { path = "crates/forest-sdk" }
forest-sdk-codegen = { path = "crates/forest-sdk-codegen" }
forest-event-store = { path = "crates/forest-event-store" }

anyhow = { version = "1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.145"
tracing = { version = "0.1", features = ["log"] }
thiserror = "2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env", "string"] }
dotenvy = { version = "0.15" }
async-trait = "0.1.88"
semver = "1.0.26"
futures = "0.3.31"
notmad = "0.11.0"
drop-queue = { version = "0.0.9", features = ["notmad"] }
rand = "0.9.1"
noworkers = "0.1.0"
tower = { version = "0.5.2", features = ["tokio", "tracing"] }
http = "1.4.0"

bytes = "1.10.1"
prost = "0.14.1"
prost-types = "0.14.1"
tonic = { version = "=0.14.2", features = [
  "gzip",
  "tls-aws-lc",
  "tls-webpki-roots",
] }
tonic-prost = "=0.14.2"
async-nats = "0.40"
insta = "1"
