[workspace]
resolver = "2"
members = [
    "crates/forage-server",
    "crates/forage-core",
    "crates/forage-db",
    "crates/forage-grpc",
    "ci",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "form"] }
minijinja = { version = "2", features = ["loader"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "compression-gzip", "compression-br"] }
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
moka = { version = "0.12", features = ["future"] }
notmad = "0.11"
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9"
time = "0.3"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"
async-nats = "0.40"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
