[package]
name = "forest-server"
edition = "2024"
version.workspace = true

[dependencies]
forest-grpc-interface.workspace = true
forest-models.workspace = true
forest-runner.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
async-trait.workspace = true
semver.workspace = true
futures.workspace = true
notmad.workspace = true
drop-queue.workspace = true
rand.workspace = true
noworkers.workspace = true

bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tower.workspace = true
http.workspace = true
thiserror.workspace = true

serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "v7"] }
inquire = "0.9.0"
reqwest = "0.13.0"
tokio-util = "0.7.15"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "uuid",
  "tls-rustls",
] }
serde_json = "1.0.145"
petname = "2.0.2"
regex = "1.12.2"
indexmap = "2"
chrono = "0.4"
tokio-stream = "0.1"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["trace"] }
argon2 = "0.5.3"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
nostatus = "0.1.0"
aes-gcm = "0.10.3"
serde_yaml = "0.9"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
tokio-stream = "0.1"
uuid = { version = "1.7.0", features = ["v7"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "tls-rustls"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
