[package]
name = "forest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
uuid.workspace = true

rusty-s3 = "0.7.0"
url = "2.5.4"
