[package]
name = "forest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
uuid.workspace = true

rusty-s3 = "0.7"
url = "2.5"
kdl = "6.3"
walkdir = "2.5"
minijinja = "2.7"
glob = "0.3"
serde_json = "1"
colored_json = "5"
