[package]
name = "non-server"
edition = "2024"
version.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true

serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
inquire = "0.7.5"
async-trait = "0.1.88"
reqwest = "0.12.20"
