[package]
name = "non"
edition = "2024"

version.workspace = true

[dependencies]
non-grpc-interface.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
async-trait.workspace = true
semver.workspace = true

bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true

serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
inquire = "0.7.5"
reqwest = "0.12.20"
glob = "0.3.2"
toml = "0.8.23"
walkdir = "2.5.0"
