[package]
name = "non"
edition = "2024"
description = "Non (nonothing) is a set of tools to help you design the development workflows you need. It is specifically built to allow you to share workflows and streamline boring tasks."
repository = "https://git.kjuulh.io/kjuulh/non"
readme = "../../README.md"
license = "MIT"

version.workspace = true

[dependencies]
non-grpc-interface.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
async-trait.workspace = true
semver.workspace = true
futures.workspace = true

bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true

serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
inquire = "0.7.5"
reqwest = "0.12.20"
glob = "0.3.2"
toml = { version = "0.8.23", features = ["preserve_order"] }
walkdir = "2.5.0"
dirs = "6.0.0"
toml_edit = "0.22.27"
rand = "0.9.1"
hex = "0.4.3"
noworkers = "0.1.0"
drop-queue = { version = "0.0.4", features = ["notmad"] }
notmad = "0.7.5"
tokio-util = "0.7.15"
minijinja = "2.11.0"
stringcase = "0.4.0"
