[package]
name = "rust-podinfo"
edition = "2024"
version.workspace = true

[dependencies]
anyhow = "1"
axum = "0.8.6"
notmad = "0.11.0"
serde.workspace = true
serde_json.workspace = true
tokio = "1"
tokio-util = "0.7.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
