[package]
name = "service-example"
edition = "2024"
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = "0.8.6"
notmad = "0.8.1"
tokio.workspace = true
tokio-util = "0.7.17"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
