[package]
name = "forest-event-store-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
forest-event-store = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[[bin]]
name = "fuzz_event_serde"
path = "fuzz_targets/fuzz_event_serde.rs"
doc = false

[[bin]]
name = "fuzz_aggregate_fold"
path = "fuzz_targets/fuzz_aggregate_fold.rs"
doc = false

[[bin]]
name = "fuzz_hydrate"
path = "fuzz_targets/fuzz_hydrate.rs"
doc = false

[workspace]
