[package]
name = "forest-component-script"
edition = "2024"
version.workspace = true
publish = false

# Generic engine that wraps a directory of (manifest.json + scripts/*.sh)
# into a components-v2-protocol-speaking component. The exec runner only
# sees a regular `forest:NAME@VER` lookup; the script-engine binary
# sitting at the resolved path discovers its component dir from
# FOREST_COMPONENT_DIR (set by the entry-point wrapper) and dispatches.

[[bin]]
name = "forest-component-script"
path = "src/main.rs"

[dependencies]
forest-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
