[package]
name = "hollow-agent"
edition = "2024"
version.workspace = true

[[bin]]
name = "hollow-agent"
path = "src/main.rs"

[dependencies]
hollow-grpc-interface.workspace = true
hollow-vm = { path = "../hollow-vm" }
hollow-vsock.workspace = true

anyhow.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures.workspace = true
uuid.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
notmad.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
