[package]
name = "hollow-controller"
edition = "2024"
version.workspace = true

[[bin]]
name = "hollow-controller"
path = "src/main.rs"

[dependencies]
hollow-grpc-interface.workspace = true
forest-grpc-interface.workspace = true
forest-runner.workspace = true

anyhow.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures.workspace = true
uuid.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
notmad.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
regex = "1"
