[package]
name = "hollow-guest"
edition = "2024"
version.workspace = true

[[bin]]
name = "hollow-guest"
path = "src/main.rs"

# Keep dependencies minimal — this is a static musl binary running inside the VM.
[dependencies]
hollow-vsock.workspace = true

anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-vsock = "0.7"
