[package]
name = "hollow-test-runner"
edition = "2024"
version.workspace = true

[[bin]]
name = "hollow-test-runner"
path = "src/main.rs"

# Runs on the remote Debian KVM host. Drives a single Firecracker microVM
# end-to-end: launches firecracker with kernel+rootfs+vsock, listens for the
# guest, exchanges JobDefinition/log/completion messages, emits JSONL events
# on stdout for the dev-side hollow-test-harness to parse.
[dependencies]
hollow-vm = { path = "../hollow-vm" }
hollow-vsock.workspace = true

anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
base64 = "0.22"
