[package]
name = "forage-server"
version = "0.1.0"
edition = "2024"

[dependencies]
forage-core = { path = "../forage-core" }
forage-db = { path = "../forage-db" }
forage-grpc = { path = "../forage-grpc", features = ["client", "server"] }
anyhow.workspace = true
chrono.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
minijinja.workspace = true
serde.workspace = true
sqlx.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
uuid.workspace = true
urlencoding = "2.1.3"
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
# Telemetry: traces + logs + metrics over OTLP. `init()` is opt-in via the
# `OTEL_SERVICE_NAME` env var; absent ⇒ pretty fmt to stdout.
canopy-otel = { git = "https://github.com/understory-io/canopy-util-rs", version = "0.1.0" }
futures-util = "0.3"
tokio-stream = "0.1"
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
notmad.workspace = true
tokio-util.workspace = true
async-nats.workspace = true
async-stream = "0.3"
lettre.workspace = true
qrcode.workspace = true
image.workspace = true
pulldown-cmark = "0.12"
ammonia = "4"
