[package]
name = "forest"
edition = "2024"
description = "forest is a set of tools to help you design the development workflows you need. It is specifically built to allow you to share workflows and streamline boring tasks."
repository = "https://git.kjuulh.io/kjuulh/forest"
readme = "../../README.md"
license = "MIT"

# `forest` carries its own version — release-please owns this number
# and bumps it on each release-please PR merge. The rest of the
# workspace continues to use `version.workspace = true` for now;
# they're not distributed externally so their version doesn't matter
# for users.
version = "0.1.6"

[dependencies]
forest-grpc-interface.workspace = true
forest-manifest.workspace = true
forest-models.workspace = true
forest-sdk.workspace = true
forest-sdk-codegen.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
async-trait.workspace = true
semver = { workspace = true, features = ["serde"] }
futures.workspace = true
notmad.workspace = true
drop-queue.workspace = true
rand.workspace = true
noworkers.workspace = true

serde.workspace = true
serde_json.workspace = true

bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tower.workspace = true
http.workspace = true
thiserror.workspace = true

uuid = { version = "1.7.0", features = ["v4", "v7"] }
inquire = "0.9.0"
reqwest = "0.13.0"
webbrowser = "1.0"
glob = "0.3.2"
globset = "0.4.16"
toml = { version = "1.1", features = ["preserve_order"] }
walkdir = "2.5.0"
dirs = "6.0.0"
toml_edit = "0.25"
hex = "0.4.3"
sha2 = "0.11"
tar = "0.4"
flate2 = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
unicode-normalization = "0.1"

tokio-util = "0.7.15"
stringcase = "0.4.0"
ron = { version = "0.12.0", features = ["indexmap"] }
minijinja = { version = "2.11.0", features = ["builtins"] }
jiff = "0.2.15"
tokio-stream = { version = "0.1.17", features = ["sync"] }

opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }
opentelemetry-appender-tracing = "0.32"
tracing-opentelemetry = "0.33"
tabled = "0.20"
chrono = "0.4"
itertools = "0.14.0"
tempfile = "3"


[dev-dependencies]
pretty_assertions = "1.4.1"
proptest = "1"
