[package]
name = "forest-greet"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "forest-greet"
path = "src/main.rs"

[dependencies]
forest-sdk = { path = "../../../../../crates/forest-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
