[package]
name = "gitea-create-repo"
edition = "2024"
version.workspace = true
publish = false

[dependencies]
forest-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Blocking client + rustls so the binary is fully static against musl.
# Default features off to drop the native-tls path.
ureq = { version = "2.10", default-features = false, features = ["json", "tls"] }
